# medievalization2

./: pyproject.toml
assets/: site.webmanifest
docs/: gameplay.md  plan.drawio
src/client/scripts/: hello.ts  tsconfig.json
src/client/scripts/app/: map.ts
src/client/scripts/folder/: file.ts
src/client/styles/: scssc.sh
src/client/styles/app/components/: map.scss  panels.scss
src/client/styles/app/framework/: frame.scss
src/client/templates/: dev.html
src/server/: __init__.py  __main__.py
src/web/: __init__.py  __main__.py
